<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WorkRequestForm"
    android:background="@drawable/bg_gradient"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fill_in_your_info"
            android:textSize="22sp"
            android:textColor="@color/primary_blue"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp" />

        <!-- Full Name -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/full_name">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_fullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Phone Number -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:layout_marginTop="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_Number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Region -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/region"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:textColor="@color/text_primary"/>

        <Spinner
            android:id="@+id/spinner_regions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/regions_array"
            android:layout_marginTop="5dp" />

        <!-- Experience -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/years_of_experience"
            android:textSize="18sp"
            android:textColor="@color/text_primary"
            android:layout_marginTop="20dp" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="5dp">
            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/less_than_5" />
            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/between_5_amp_10" />
            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/more_than_10" />
        </RadioGroup>

        <!-- Professions -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profession_s"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:textColor="@color/text_primary" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <CheckBox
                android:id="@+id/checkbox_carpenter"
                android:text="@string/carpenter"
                android:onClick="checkBoxProfession"
                android:textSize="16sp" />
            <CheckBox
                android:id="@+id/checkbox_plumber"
                android:text="@string/plumber"
                android:onClick="checkBoxProfession"
                android:textSize="16sp" />
            <CheckBox
                android:id="@+id/checkbox_electrician"
                android:text="@string/electrician"
                android:onClick="checkBoxProfession"
                android:textSize="16sp" />
            <CheckBox
                android:id="@+id/checkbox_roofer"
                android:text="@string/roofer"
                android:onClick="checkBoxProfession"
                android:textSize="16sp" />
            <CheckBox
                android:id="@+id/checkbox_mason"
                android:text="@string/mason"
                android:onClick="checkBoxProfession"
                android:textSize="16sp" />
            <CheckBox
                android:id="@+id/checkbox_locksmit"
                android:text="@string/locksmith"
                android:onClick="checkBoxProfession"
                android:textSize="16sp" />
            <CheckBox
                android:id="@+id/checkbox_glassTechnican"
                android:text="@string/glass_technican"
                android:onClick="checkBoxProfession"
                android:textSize="16sp" />
        </GridLayout>

        <!-- Optional Certification -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_Certification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_primary"
            android:hint="@string/certification_optional"
            android:layout_marginTop="15dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_certification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/certificationImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_certification_image"
            android:layout_marginTop="5dp"
            android:textSize="16sp"
            android:textColor="@color/text_primary"/>

        <!-- ID Upload -->
        <TextView
            android:id="@+id/IdCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/press_to_add_your_identity_card_mandatory"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/text_primary"
            android:layout_marginTop="15dp" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginTop="8dp"
            android:scaleType="centerCrop"
            android:layout_gravity="center"
            android:background="@drawable/bg_imageview" />

        <!-- Submit Button -->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/submit_request"
            android:textSize="18sp"
            android:onClick="submit"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/primary_blue"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp" />
    </LinearLayout>
</ScrollView>
