<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RepairRequestForm"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Homeowner Details -->
        <EditText
            android:id="@+id/editTextName"
            android:hint="@string/full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/editTextPhone"
            android:hint="@string/contact_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"/>
        <EditText
            android:id="@+id/editTextEmail"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>
        <EditText
            android:id="@+id/editTextAddress"
            android:hint="@string/property_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!-- Issue Description -->
        <EditText
            android:id="@+id/editTextIssueLocation"
            android:hint="@string/location_of_issue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/editTextDescription"
            android:hint="@string/describe_the_issue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:minLines="3"
            android:gravity="top"/>

        <!-- Photo Upload -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            >
            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_photos_of_the_issue"
            android:textStyle="bold"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ivAddPhotos"
                android:src="@drawable/baseline_add_24"/>

        </LinearLayout>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">
            <LinearLayout
                android:id="@+id/imageContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />
        </HorizontalScrollView>

        <CalendarView
            android:id="@+id/calendarView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/availableTimesLabel"
            android:text="@string/available_times"
            android:textStyle="bold"
            android:visibility="gone"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/availableTimesRecycler"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="160dp"
            android:orientation="vertical"/>

        <!-- Submit -->
        <Button
            android:id="@+id/buttonSubmit"
            android:text="@string/submit_request"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"/>
    </LinearLayout>
</ScrollView>