<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    android:elevation="4dp"
    app:cardCornerRadius="12dp"
    android:backgroundTint="@color/blue5">

    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView android:id="@+id/textProviderName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/provider_name"
            android:textStyle="bold"
            android:textSize="16sp" />

        <TextView android:id="@+id/textDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date" />

        <TextView android:id="@+id/textLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location" />

        <TextView android:id="@+id/textStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/state"
            android:textColor="@color/red"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>

