<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="24dp"
    android:background="@drawable/bg_gradient"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <Spinner
            android:id="@+id/languageSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/language_array"
            android:layout_gravity="end"
            android:layout_marginBottom="24dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="100dp">
            <ImageView
                android:id="@+id/logoImage"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/logo"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/rapidrestore"
                android:textSize="32sp"
                android:textStyle="bold"
                android:textColor="@color/primary_blue"/>

        </LinearLayout>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/already_have_an_acount"
            android:textSize="18sp"
            android:layout_marginBottom="8dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_marginStart="8dp"
            android:outlineSpotShadowColor="@color/blue"
            android:layout_marginEnd="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_numberOrEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:endIconMode="password_toggle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/forgetPassword"
            android:text="@string/forget_password"
            android:textColor="@color/primary_blue"
            android:textSize="14sp"
            android:layout_gravity="end"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textSize="18sp"
            android:layout_marginTop="24dp"
            android:onClick="logIN"
            android:backgroundTint="@color/primary_blue"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textColor="@android:color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_to_rapidrestore_create_an_account"
            android:textColor="@color/blue"
            android:textSize="16sp"
            android:layout_marginTop="150dp"
            android:onClick="createAccount"/>
    </LinearLayout>
</ScrollView>
