<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".AdminPage"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp">

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/logo"
        android:layout_gravity="center"
        />

    <TextView
        android:id="@+id/tvAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admin"
        android:textSize="40sp"
        android:textColor="@color/primary_blue"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/button_check_reviews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_reviews"
        android:layout_marginTop="80dp"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/blue"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_check_work_requests"
        android:text="@string/check_work_requests"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/primary_blue"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="160dp"/>

</LinearLayout>